<resources>
	<string name="app_name">Vsd Dashboard Application</string>
	
	<string name="vsdaddress">VSD Address</string>
	<string name="authentication_path">/authentication</string>
	<string name="vsdash">VSDash</string>
	<string name="api_settings_label">API Settings</string>
	<string name="settings">Settings</string>
	<string name="address_hint">API Address</string>
	<string name="monitPort_hint">Monit Port</string>
	<string name="vsdport_hint">VSD API Port</string>
	<string name="button_connect">Connect</string>
	<string name="login_label">Login</string>
	<string name="password">Password</string>
	<string name="username">Username</string>
	<string name="organization">Organization</string>
	<string name="name">Name</string>
	<string name="description">Description</string>
	<string name="version">Version</string>
	
	<string name="nsgs">Network Services\nGateways</string>
	<string name="vsd_status">Virtual Services Directory Status</string>
	<string name="vsc_status">Virtual Services Controller Status</string>
	<string name="connecting">Connecting…</string>
	<string name="connection_failed">Connection failed</string>
	<string name="invalid_credentials">Connection failed</string>
	<string name="connected">Connection failed</string>
	
	<string name="netaccelaration">Network Acceleration</string>
	<string name="status">Status</string>
	<string name="configstatus">Configuration Status</string>
	<string name="personality">Personality</string>
	<string name="product">Product</string>
	<string name="family">Family</string>
	<string name="operstatus">Operation Status</string>
	<string name="opermode">Operation Mode</string>
	<string name="lastupdated">Last Updated</string>
	<string name="creationdate">Creation Date</string>
	<string name="serial">Serial Number</string>
	<string name="bios">BIOS</string>
	<string name="CPU">CPU</string>
	<string name="time">Time</string>
	<string name="avg_jitter">Avg. Jitter</string>
	<string name="avg_delay">Avg. Delay</string>
	<string name="pkt_loss">Packet Loss</string>
	
	<string name="test">Test</string>
	<string name="save">Save</string>
	<string name="vsps">Virtual Services\nPlataform</string>
	<!--string name="sites">Sites Remotos</string-->
	<string name="vsds">Virtual Services\nDirectory</string>
	<string name="vscs">Virtual Services\nController</string>
	<string name="vrss">Virtual Routing and Switching</string>
	<string name="creation_date">Creation Date</string>
	<string name="product_version">Product Version</string>
	<string name="address">Address</string>
	<string name="location">Location</string>
	<string name="management_ip">Management IP</string>
	
	<string name="porttype">Type</string>
	<string name="portname">Port Name</string>
	<string name="nsgname">NSG Name</string>
	<string name="speed">Speed</string>
	<string name="mtu">MTU</string>
	<string name="vlan_range">VLAN Range</string>
	<string name="automatic_update_label">Automatic Update (VSD)</string>
	<string name="automatic_update_description">Automatically updates the VSD Data received by listening to events
	</string>
	<string name="connection">Connection</string>
	<string name="connection_description">Defines the connection the user wants to use</string>
	<string name="uptime">Uptime</string>
	<string name="nsg">Nuage Gateway</string>
	<string name="vrs">Virtual Router and Switching</string>
	<string name="vsp">Virtual Service Plataform</string>
	<string name="vsc">Virtual Service Controller</string>
	<string name="port">Port</string>
	
	<string name="statistics">Statistics</string>
	<string name="apm_label">APM</string>
	<string name="apm_description">Application Binding Management, the statistics on a group of applications</string>
	<string name="esPort_hint">Elastic Search Port</string>
	<string name="memory">Memory</string>
	<string name="vsd_health">Health</string>
	<string name="perfmonitor_label">Performance Monitor</string>
	<string name="perfmonitor_description">The performance monitor used to track statistics</string>
	
	<array name="languages">
		<item>English</item>
	</array>
	
	<array name="time">
		<item>5 Minutes</item>
		<item>10 Minutes</item>
		<item>15 Minutes</item>
		<item>20 Minutes</item>
	</array>
	
	<string name="inbound">Inbound</string>
	<string name="outbound">Outbound</string>
	<string name="enterprise_list">Enterprise List</string>
	<string name="nsg_list">NSG List</string>
	<string name="vrs_list">VRS List</string>
	<string name="vsd_dashboard">VSD Dashboard</string>
	<string name="date_range_label">Date Range</string>
	<string name="date_range_description">Range of time displayed before the selected range</string>
	<string name="minutes">Minutes</string>
	<string name="date_selector_label">Date Selector</string>
	<string name="date_selector_description">Select the max date time</string>
	
	<string name="systemid">System ID</string>
	<string name="command">Command</string>
	<string name="detailed_status">Detailed Status</string>
	<string name="downloadprogress">Download Progress</string>
	<string name="hypervisor">Hypervisor Details</string>
	<string name="role">Role</string>
	<string name="type">Type</string>
	
	<string name="number_vm">Number of Virtual Machines</string>
	<string name="number_container">Number of Containers</string>
	<string name="number_bridge">Number of Bridge Interfaces</string>
	<string name="number_host">Number of Host Interfaces</string>
	<string name="associatedgateway">Associated Gateway</string>
	<string name="vlan">VLAN</string>
	<string name="systemtype">System Type</string>
	<string name="subtype">Subtype</string>
	<string name="operationalstate">Operational State</string>
	<string name="peeroperationalstate">Peer Operational State</string>
	<string name="health">Health</string>
</resources>
