<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<com.google.android.material.card.MaterialCardView 
			android:id="@+id/card"
			android:layout_margin="@dimen/margin_default"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content">
			
			<LinearLayout
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
			
				<LinearLayout
					android:orientation="horizontal"
					android:weightSum="1"
					android:layout_margin="@dimen/margin_default"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				
					<LinearLayout
						android:layout_weight=".5"
						android:orientation="vertical"
						android:layout_margin="@dimen/margin_default"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">
					
						<TextView
								android:text="@string/automatic_update_label"
								android:textSize="@dimen/label_size"
								android:layout_gravity="start"
								android:textStyle="bold"
								android:layout_width="wrap_content"
								android:layout_height="wrap_content"/>
							
						<TextView
							android:layout_gravity="start"
							android:text="@string/automatic_update_description"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"/>
					</LinearLayout>
					
					<ToggleButton
						android:layout_weight=".4"
						android:layout_gravity="end"
						android:gravity="center_vertical"
						android:id="@+id/auto_update_toggle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"/>
				
				</LinearLayout>
				
				<View
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@android:color/darker_gray"/>
				
				<LinearLayout
					android:layout_margin="@dimen/margin_default"
					android:id="@+id/internet_connection"
					android:orientation="horizontal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">
				
					<LinearLayout
						android:orientation="vertical"
						android:layout_width="match_parent"
						android:layout_height="wrap_content">
						
						<TextView
							android:layout_gravity="start"
							android:text="@string/connection"
							android:textSize="@dimen/label_size"
							android:textStyle="bold"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"/>
						
						<TextView
							android:layout_gravity="start"
							android:text="@string/connection_description"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"/>
					</LinearLayout>
					
					
				
				</LinearLayout>
			</LinearLayout>
		</com.google.android.material.card.MaterialCardView>
		
	</LinearLayout>
	
</layout>
