<?xml version="1.0" encoding="utf-8"?>
<layout
	xmlns:android="http://schemas.android.com/apk/res/android" >
	<data/>
		
	<GridLayout
		android:id="@+id/grid"
		android:columnCount="2"
		android:rowCount="3"
		android:alignmentMode="alignMargins"
		android:columnOrderPreserved="false"
		android:layout_margin="@dimen/margin_default"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">
		
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1" >
			<androidx.cardview.widget.CardView
				android:id="@+id/nsg_list_option"
				android:foreground="?android:attr/selectableItemBackground"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:clickable="true"
				android:layout_margin="@dimen/margin_default"
				android:focusable="true">
				<TextView
					android:layout_margin="@dimen/margin_default"
					android:text="@string/nsgs"
					android:layout_width="wrap_content"
					android:textAlignment="center"
					android:layout_height="wrap_content"/>
			</androidx.cardview.widget.CardView>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1" >
		<androidx.cardview.widget.CardView
			android:id="@+id/vsc_list_option"
			android:foreground="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_default"
			android:focusable="true">
			<TextView
				android:layout_margin="@dimen/margin_default"
				android:text="@string/vscs"
				android:textAlignment="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</androidx.cardview.widget.CardView>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1" >
		<androidx.cardview.widget.CardView
			android:id="@+id/vsd_list_option"
			android:foreground="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_default"
			android:focusable="true">
			<TextView
				android:layout_margin="@dimen/margin_default"
				android:text="@string/vsds"
				android:textAlignment="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</androidx.cardview.widget.CardView>
		</LinearLayout>
		
		<!--<androidx.cardview.widget.CardView
			android:id="@+id/site_list_option"
			android:foreground="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_margin="@dimen/margin_default"
			android:focusable="true">
			<TextView
				android:layout_margin="@dimen/margin_default"
				android:text="@string/sites"
				android:textAlignment="center"
				android:layout_width="wrap_content"
				android:layout_gravity="center_horizontal"
				android:layout_columnWeight="1"
				android:layout_height="wrap_content"/>
		</androidx.cardview.widget.CardView>-->
		
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1" >
		<androidx.cardview.widget.CardView
			android:id="@+id/vsp_list_option"
			android:foreground="?android:attr/selectableItemBackground"
			android:layout_gravity="center_vertical"
			android:clickable="true"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/margin_default"
			android:focusable="true">
			<TextView
				android:layout_margin="@dimen/margin_default"
				android:maxLines="4"
				android:textAlignment="center"
				android:text="@string/vsps"
				android:layout_columnWeight="1"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</androidx.cardview.widget.CardView>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1" >
		<androidx.cardview.widget.CardView
			android:id="@+id/vrs_list_option"
			android:foreground="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="@dimen/margin_default"
			android:focusable="true">
			<TextView
				android:layout_margin="@dimen/margin_default"
				android:maxLines="4"
				android:text="@string/vrss"
				android:textAlignment="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</androidx.cardview.widget.CardView>
		</LinearLayout>
		
		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="0dp"
			android:layout_columnWeight="1"
			android:layout_rowWeight="1" >
		<androidx.cardview.widget.CardView
			android:id="@+id/settings"
			android:foreground="?android:attr/selectableItemBackground"
			android:clickable="true"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_margin="@dimen/margin_default"
			android:focusable="true">
			<TextView
				android:layout_margin="@dimen/margin_default"
				android:maxLines="4"
				android:text="@string/settings"
				android:textAlignment="center"
				android:layout_gravity="center"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</androidx.cardview.widget.CardView>
		</LinearLayout>
		
		<!--<Button
			android:layout_column="0"
			android:text="@string/nsgs"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>-->
		
		<!--
		<Button
			android:text="@string/vsd_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		
		<Button
			android:text="@string/vsc_status"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
		-->
	</GridLayout>
</layout>